--- a/resources/style.css
+++ b/resources/style.css
@@ -10,6 +10,11 @@ h1 {
     text-align: center;
 }
 
+#logo {
+    display: block;
+    margin: 0 auto;
+}
+
 .enter h1 a {
     font-size: 8rem;
     text-decoration: none;
