--- a/resources/style.css
+++ b/resources/style.css
@@ -5,6 +5,10 @@ body {
     font-family: sans-serif;
 }
 
+* {
+    /* border: 1px solid green; */
+}
+
 h1 {
     font-size: 8rem;
     text-align: center;
@@ -29,13 +33,13 @@ hr {
 }
 
 main {
-    width: 60%;
+    width: auto;
     /* margin-top: 2000px; */
     /* border: 1px solid red; */
     margin: 0 auto;
     height: auto;
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 2fr 2fr 2fr;
     grid-gap: 1.5rem;
 }
 
@@ -43,6 +47,10 @@ main {
     height: 100%;
     width: 100%;
     color: rgb(190, 2, 2);
+    /* border: 1px solid red; */
+}
+
+.nav {
     /* border: 1px solid red; */
 }
 
@@ -71,8 +79,11 @@ main {
 }
 
 .post p {
-    line-height: 1.5rem;
-    font-size: 1.5rem;
+    display:    block;
+    font-size: 1.3rem;
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 2rem;
 }
 
 .post label {
@@ -83,6 +94,111 @@ main {
     width: 100%;
 }
 
+
 .post .vid {
+    display: block;
+    width: 80%;
+    margin: 0 auto;
+} 
+
+iframe {
+    display: inline-block;
+    margin-left: auto;
     width: 100%;
+    height: 20rem;
+    margin-left: 5rem;
+}
+
+.cc-m-video-wrapper {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.j-gallery {
+    /* border: 2px solid red; */
+    /* border: 1px solid yellow; */
+    overflow: hidden;
+}
+
+.j-gallery .cc-m-gallery-cool-item {
+    display: inline-block !important;
+}
+
+.j-gallery .cc-m-gallery-cool-item a img{
+    width: auto !important;
+    /* border: 1px solid blue; */
+}
+
+.cc-m-gallery-container {
+    /* border: 1px solid red; */
+    /* display: grid !important; */
+    grid-template-columns: auto auto 1fr!important;
+}
+
+
+
+
+
+
+.con {
+    /* display: grid; */
+    width: 80%;
+    border: 1px solid blue;
+    margin: 0 auto;
+    overflow-wrap: unset;
+}
+
+.n {
+    /* text-align: center; */
+    margin: 0 auto !important;
+}
+
+.j-imageSubtitle {
+    /* text-align: center; */
+    /* border: 1px solid green; */
+}
+
+.j-imageSubtitle img {
+    /* border: 1px solid orange; */
+    width: 100%;
+}
+
+.j-imageSubtitle a {
+    width: 100% !important;
+}
+
+.cc-imagewrapper {
+    display: inline-block !important;
+    /* border: 1px solid brown; */
+    margin: 0;
+    width: 100%;
+}
+
+.hr {
+    border-top: 1px solid white;
+    padding-top: 2rem;
+    margin-top: 2rem;
+}
+
+.cc-m-video-gutter iframe {
+    width: 80rem !important;
+    margin: 0 auto !important;
+    /* border: 1px solid red; */
+}
+
+.cc-m-video-gutter {
+    width: 50% !important;
+    height: auto !important;
+    margin:0 auto;
+    margin-top: 4rem !important;
+    margin-bottom: 1rem !important;
+}
+
+.cc-m-video-wrapper {
+    width: 100% !important;
+}
+
+.j-module h1 {
+    font-size: 2rem !important;
 }
